--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="topnav" id="myTopnav">
           <img src="images/Golegana.png">
-          <a href="#home" class="active">Home</a>
+          <a href="#home">Team</a>
           <a href="#news">News</a>
           <a href="#contact">Contact</a>
           <a href="#about">About</a>
@@ -30,6 +30,8 @@
                 x.className = "topnav";
               }
             }
+
+
         </script>
     </body>
 </html>
