--- a/games.html
+++ b/games.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="./StyleCSS/indexStyle.css">
+        <link rel="stylesheet" href="./StyleCSS/gameStyle.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta charset="UTF-8">
         <meta name="description" content="This is the Website for the Golegana Group on Roblox!">
@@ -10,8 +10,8 @@
     <body>
         <div class="topnav" id="myTopnav">
           <img src="images/Golegana.png">
+          <a href="index.html">Home</a>
           <a href="team.html">Team</a>
-          <a href="games.html">Games</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
           </a>
