--- a/team.html
+++ b/team.html
@@ -6,6 +6,8 @@
         <meta charset="UTF-8">
         <meta name="description" content="This is the Website for the Golegana Group on Roblox!">
         <title>Golegana</title>
+        <script src="JavaScript/responsivetopNav.js"></script>
+
     </head>
     <body>
         <div class="topnav" id="myTopnav">
@@ -16,20 +18,5 @@
             <i class="fa fa-bars"></i>
           </a>
         </div>
-
-        
-
-        <script>
-            function myFunction() {
-              var x = document.getElementById("myTopnav");
-              if (x.className === "topnav") {
-                x.className += " responsive";
-              } else {
-                x.className = "topnav";
-              }
-            }
-
-
-        </script>
     </body>
 </html>
