--- a/index.html
+++ b/index.html
@@ -1,35 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="./StyleCSS/indexStyle.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <meta charset="UTF-8">
-        <meta name="description" content="This is the Website for the Golegana Group on Roblox!">
-        <title>Golegana</title>
-    </head>
-    <body>
-        <div class="topnav" id="myTopnav">
-          <img src="images/Golegana.png">
-          <a href="team.html">Team</a>
-          <a href="games.html">Games</a>
-          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-          </a>
-        </div>
-
-        
-
-        <script>
-            function myFunction() {
-              var x = document.getElementById("myTopnav");
-              if (x.className === "topnav") {
-                x.className += " responsive";
-              } else {
-                x.className = "topnav";
-              }
-            }
-
-
-        </script>
-    </body>
+  <head>
+      <link rel="stylesheet" href="./StyleCSS/indexStyle.css">        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <meta charset="UTF-8">
+      <meta name="description" content="This is the Website for the Golegana Group on Roblox!">
+      <title>Golegana</title>        
+      <script src="JavaScript/responsivetopNav.js"></script>
+  </head>
+  <body>
+     <div class="topnav" id="myTopnav">
+        <img src="images/Golegana.png">
+        <a href="team.html">Team</a>
+        <a href="games.html">Games</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+  </body>
 </html>
