--- a/games.html
+++ b/games.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <script src="JavaScript/upcommingGameChanger.js"></script>
         <link rel="stylesheet" href="./StyleCSS/gameStyle.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta charset="UTF-8">
@@ -23,8 +22,8 @@
         <div class="commingSoonSectionDIV" id="commingSoonSection">
           <h1 id="descriptionTitle">Upcomming Games</h1>
           <img src="upcommingGame/icon.png" alt="">
-          <h1 id="upCommingGameTitle">Game Title</h1>
-          <P id="upCommingGameDescription">Description</P>
+          <h1 id="upCommingGameTitle">BusinessCreator</h1>
+          <P id="upCommingGameDescription">Create a little Business and become one of the Best Business Creators!</P>
         </div>
         <br><br><br><br><br><br><br><br><br><br>
         <hr>
